--- a/Frontend_Mentor/QR_Code_component/style.css
+++ b/Frontend_Mentor/QR_Code_component/style.css
@@ -7,6 +7,7 @@
 body{
     font-family: 'Outfit', sans-serif;
     display: flex;
+    flex-direction: column;
     min-height: 100vh;
     background-color: hsl(212, 45%, 89%);
     justify-content: center;
